--- a/ckanext/sparql/templates/ckanext/sparql/query.html
+++ b/ckanext/sparql/templates/ckanext/sparql/query.html
@@ -55,7 +55,10 @@
             {% endfor %}
             </tbody>
             </table-->
-            <button onclick="create_data()" id="showdata" class="mybutton" style="margin-left auto; margin-right: auto;">{{_("Show data")}}</button>
-            <button onclick="create_data()" id="updatedata" class="mybutton" style="margin-left auto; margin-right: auto;display: none;"><i class="fa fa-refresh"></i> {{_("Update data")}}</button>
+            <script type="text/javascript">
+
+            </script>
+            <!--button onclick="create_data()" id="showdata" class="mybutton" style="margin-left auto; margin-right: auto;">{{_("Show data")}}</button-->
+            <button onclick="create_data()" id="updatedata" class="mybutton" style="margin-left auto; margin-right: auto;"><i class="fa fa-refresh"></i> {{_("Load data")}}</button>
         </div>
 {% elif direct_link == '1' %}{% set results_python_data_structure = h.sparqlQuery('') %}{{ results_python_data_structure | safe }}{% else %}{{ direct_link }}{% endif %}{% endblock %}
