--- a/ckanext/sparql/templates/ckanext/sparql/query.html
+++ b/ckanext/sparql/templates/ckanext/sparql/query.html
@@ -54,11 +54,9 @@
             {% set counter = (counter + 1) -%}  
             {% endfor %}
             </tbody>
-            </table-->
-            <script type="text/javascript">
+            </table!-->
 
-            </script>
-            <!--button onclick="create_data()" id="showdata" class="mybutton" style="margin-left auto; margin-right: auto;">{{_("Show data")}}</button-->
-            <button onclick="create_data()" id="updatedata" class="mybutton" style="margin-left auto; margin-right: auto;"><i class="fa fa-refresh"></i> {{_("Load data")}}</button>
+            <button onclick="create_data()" id="showdata" class="mybutton" style="margin-left auto; margin-right: auto;">{{_("Show data")}}</button>
+            <!--button onclick="create_data()" id="updatedata" class="mybutton" style="margin-left auto; margin-right: auto;"><i class="fa fa-refresh"></i> {{_("Load data")}}</button!-->
         </div>
 {% elif direct_link == '1' %}{% set results_python_data_structure = h.sparqlQuery('') %}{{ results_python_data_structure | safe }}{% else %}{{ direct_link }}{% endif %}{% endblock %}
